work on build_infix_latex_term()
line 474
bug fix for a + (-(b+c))

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,7 @@
     "supsetneqq",
     "symb",
     "Tbox"
-  ]
+  ],
+  "python.languageServer": "Pylance",
+  "python.analysis.typeCheckingMode": "basic",
 }
