Fitch proof, step 1
3 Classes
(1) Ann (for annotation)
(2) NodeLabel (like token)
(3) ProofNode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,4 +36,7 @@
   ],
   "python.languageServer": "Pylance",
   "python.analysis.typeCheckingMode": "basic",
+  "python.analysis.extraPaths": [
+    "./logical_formulas"
+  ],
 }
