Alpha-beta pruning
For later use in Fitch proof tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
     "elim",
     "emptyset",
     "FCTN",
+    "fixedsize",
     "FMLA",
+    "fontsize",
     "forall",
     "httpimport",
     "infty",
@@ -17,6 +19,7 @@
     "ngtr",
     "nleq",
     "nless",
+    "nodesep",
     "nsubseteq",
     "nsupseteq",
     "nterm",
@@ -24,6 +27,7 @@
     "operatorname",
     "oplus",
     "otimes",
+    "ranksep",
     "rightarrow",
     "simeq",
     "subseteq",
